--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ font-size: 2rem;
 <body>
     
    <nav class="navbar">
-        <img class="logo" src="/image/panda_logo.png" alt="Logo">
+        <img class="logo" src="panda_logo.png" alt="Logo">
         <ul class="navlinks">
             <li><a href="">Home</a></li>
             <li><a href="">Contact Us</a></li>
@@ -347,4 +347,5 @@ and every challenge shapes us into who we are meant to be."
 </body>
 
 </html>
+
 
