--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@ font-size: 2rem;
    <nav class="navbar">
         <img class="logo" src="panda_logo.png" alt="Logo">
         <ul class="navlinks">
-            <li><a href="">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="">Contact Us</a></li>
             <li><a href="#About">About Us</a></li>
-            <li><a href="/service.html">Service</a></li> 
+            <li><a href="service.html">Service</a></li> 
         </ul>
         <div class="btn">
              <button class="navbutton"><a href="signin.html">sign in</a></button>
@@ -347,5 +347,6 @@ and every challenge shapes us into who we are meant to be."
 </body>
 
 </html>
+
 
 
