--- a/service.html
+++ b/service.html
@@ -12,86 +12,32 @@
     font-size: 45px;
     font-weight: bold;
     color: #0b4f0b;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     text-shadow: 2px 2px #ffffff;
     font-family: 'Comic Sans MS';
 }
 
+/* Grid layout */
 .service-container{
-    width: 80%;
+    width: 85%;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 35px;
 }
 
+/* Boxes */
 .service-box{
-    background: #ffffffb0;
+    background: rgba(255,255,255,0.8);
     padding: 25px;
-    border-radius: 20px;
+    border-radius: 18px;
     text-align: center;
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     transition: 0.4s;
     backdrop-filter: blur(5px);
+    border: 2px solid transparent;
 }
 
 .service-box:hover{
     transform: translateY(-12px);
-    box-shadow: 0 12px 30px rgba(0,0,0,0.3);
-}
-
-.service-box img{
-    width: 110px;
-    margin-bottom: 15px;
-    transition: 0.4s;
-}
-
-.service-box:hover img{
-    transform: scale(1.1);
-}
-
-.service-box h3{
-    font-size: 22px;
-    color: #056105;
-    font-family: 'Comic Sans MS';
-}
-
-.service-box p{
-    font-size: 15px;
-    color: #333;
-    margin-top: 10px;
-}
-</style>
-
-<!-- SERVICE SECTION HTML -->
-<section class="service-section" id="service">
-    <h2 class="service-heading">Our Services</h2>
-
-    <div class="service-container">
-
-        <div class="service-box">
-            <img src="https://i.ibb.co/nR9rF1M/elephant.png">
-            <h3>Adventure Stories</h3>
-            <p>Explore thrilling jungle adventures full of courage, friendship and nature.</p>
-        </div>
-
-        <div class="service-box">
-            <img src="https://i.ibb.co/zQZqPJP/tiger.png">
-            <h3>Character Lessons</h3>
-            <p>Learn kindness, bravery, team spirit and respect for life around us.</p>
-        </div>
-
-        <div class="service-box">
-            <img src="https://i.ibb.co/4whnJ87/monkey.png">
-            <h3>Fun Activities</h3>
-            <p>Play jungle puzzles, quizzes and creative drawing challenges!</p>
-        </div>
-
-        <div class="service-box">
-            <img src="https://i.ibb.co/vvwYQ5x/parrot.png">
-            <h3>Storytelling Sessions</h3>
-            <p>Enjoy interactive storytelling with voice acting and fun expressions.</p>
-        </div>
-
-    </div>
-</section>
+    box-shadow: 0 12p
